--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ PHONE=+79241822333
 # === АДМИН ===
 ADMIN_ID=925572932
 
-# === MySQL БАЗА ДАННЫХ ===
+# === MySQL БАЗА ДАННЫХ =======
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=cryptohunter_user
